--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -6,9 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: touch main.txt
+      - run: ls
       - name: Checkout
         uses: actions/checkout@v3
       - name: Typst
         uses: lvignoli/typst-action@main
         with:
           source_file: main.typ
+      - run: ls
