--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - run: touch main.txt
       - run: ls
+      - run: ls ..
+      - run: ls ../..
+      - run: ls ../../..
       - name: Checkout
         uses: actions/checkout@v3
       - name: Typst
