--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,19 +1,38 @@
 name: Build Typst document
-on: push
+on: [push, workflow_dispatch]
+
+permissions:
+  contents: write
 
 jobs:
-  build_typst_documents:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - run: touch main.txt
-      - run: ls
-      - run: ls ..
-      - run: ls ../..
-      - run: ls ../../..
       - name: Checkout
         uses: actions/checkout@v3
+        
       - name: Typst
         uses: lvignoli/typst-action@main
         with:
-          source_file: main.typ
-      - run: ls
+          source_file: |
+            first_file.typ
+            second_file.typ
+            third_and_final_file.typ
+
+      - name: Upload PDF file
+        uses: actions/upload-artifact@v4
+        with:
+          name: PDF
+          path: *.pdf
+
+      - name: Get current date
+        id: date
+        run: echo "DATE=$(date +%Y-%m-%d-%H:%M)" >> $GITHUB_ENV
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: github.ref_type == 'tag'
+        with:
+          name: "${{ github.ref_name }} — ${{ env.DATE }}"
+          body: Auto release API ${{env.RELEASE_TAG}} by @ci
+          files: main.pdf
