--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -10,26 +10,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
       - name: Typst
-        uses: lvignoli/typst-action@main
+        uses: lvignoli/typst-action@v0
         with:
-          source_file: main.typ
-
+          source_file: |
+            main.typ
       - name: Upload PDF file
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: PDF
-          path: main.pdf
-
+          name: PDFs
+          path: |
+            main.pdf
       - name: Get current date
         id: date
         run: echo "DATE=$(date +%Y-%m-%d-%H:%M)" >> $GITHUB_ENV
-
       - name: Release
         uses: softprops/action-gh-release@v1
         if: github.ref_type == 'tag'
         with:
           name: "${{ github.ref_name }} — ${{ env.DATE }}"
-          # body: Auto release API ${{env.RELEASE_TAG}} by @ci
-          files: main.pdf
+          files: "*.pdf"
