--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -10,23 +10,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        
       - name: Typst
         uses: lvignoli/typst-action@main
         with:
-          source_file: |
-            main.typ
+          source_file: "*.typ"
+
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
         with:
-          name: PDFs
-          path: |
-            main.pdf
+          name: PDF
+          path: "*.pdf"
+
       - name: Get current date
         id: date
         run: echo "DATE=$(date +%Y-%m-%d-%H:%M)" >> $GITHUB_ENV
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: github.ref_type == 'tag'
         with:
           name: "${{ github.ref_name }} — ${{ env.DATE }}"
+          body: Auto release API ${{env.RELEASE_TAG}} by @ci
           files: "*.pdf"
