--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,13 +14,13 @@ jobs:
       - name: Typst
         uses: lvignoli/typst-action@main
         with:
-          source_file: "*.typ"
+          source_file: main.typ
 
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
         with:
           name: PDF
-          path: "*.pdf"
+          path: main.pdf
 
       - name: Get current date
         id: date
@@ -32,4 +32,4 @@ jobs:
         with:
           name: "${{ github.ref_name }} — ${{ env.DATE }}"
           body: Auto release API ${{env.RELEASE_TAG}} by @ci
-          files: "*.pdf"
+          files: main.pdf
