alright but now it should really totally work

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,5 +31,6 @@ jobs:
         # if: github.ref_type == 'tag'
         with:
           name: "${{ github.ref_name }} — ${{ env.DATE }}"
+          tag_name: "pdf-${{env.RELEASE_TAG}}"
           body: Auto release API ${{env.RELEASE_TAG}} by @ci
           files: main.pdf
