--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,6 +31,7 @@ jobs:
         # if: github.ref_type == 'tag'
         with:
           name: "${{ github.ref_name }} — ${{ env.DATE }}"
-          tag_name: "pdf-${{env.RELEASE_TAG}}"
+          commitish: main
+          tag_name: ${{env.RELEASE_TAG}}
           body: Auto release API ${{env.RELEASE_TAG}} by @ci
           files: main.pdf
