--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,6 +31,5 @@ jobs:
         if: github.ref_type == 'tag'
         with:
           name: "${{ github.ref_name }} — ${{ env.DATE }}"
-          # tag_name: ${{env.DATE}}
-          body: Auto generated release ${{env.RELEASE_TAG}} by @ci
+          body: Auto release API ${{env.RELEASE_TAG}} by @ci
           files: main.pdf
