--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,5 +31,8 @@ jobs:
         if: github.ref_type == 'tag'
         with:
           name: "${{ github.ref_name }} — ${{ env.DATE }}"
-          body: Auto release API ${{env.RELEASE_TAG}} by @ci
+          body: >
+            Auto release API ${{env.RELEASE_TAG}} by @ci
+            
+            Typst github action by @lvignoli
           files: main.pdf
